open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: kigawa-net-llm-ui
  labels:
    app: open-webui
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: open-webui
  type: ClusterIP
