open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  namespace: kigawa-net-llm-ui
  annotations:
    haproxy.org/timeout-connect: "10s"
    haproxy.org/timeout-server: "120s"
    haproxy.org/timeout-tunnel: "3600s"
spec:
  ingressClassName: haproxy
  rules:
    - host: chat.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui-service
                port:
                  number: 80
